[gd_scene load_steps=72 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://theme.theme" type="Theme" id=2]
[ext_resource path="res://Exit.png" type="Texture" id=3]
[ext_resource path="res://Play.png" type="Texture" id=4]
[ext_resource path="res://Play_clicked.png" type="Texture" id=5]
[ext_resource path="res://Exit_clicked.png" type="Texture" id=6]
[ext_resource path="res://lvl1_locked.png" type="Texture" id=7]
[ext_resource path="res://lvl2.png" type="Texture" id=8]
[ext_resource path="res://lvl2_locked.png" type="Texture" id=9]
[ext_resource path="res://lvl3.png" type="Texture" id=10]
[ext_resource path="res://lvl1.png" type="Texture" id=11]
[ext_resource path="res://lvl3_locked.png" type="Texture" id=12]
[ext_resource path="res://lvl4.png" type="Texture" id=13]
[ext_resource path="res://lvl4_locked.png" type="Texture" id=14]
[ext_resource path="res://Title.png" type="Texture" id=15]
[ext_resource path="res://Sound/Button_9.wav" type="AudioStream" id=16]
[ext_resource path="res://Sound/Beats A.wav" type="AudioStream" id=17]
[ext_resource path="res://Sound/confirm_style_1_004.wav" type="AudioStream" id=18]
[ext_resource path="res://Sound/error_style_2_001.wav" type="AudioStream" id=19]
[ext_resource path="res://restart.png" type="Texture" id=20]
[ext_resource path="res://Continue.png" type="Texture" id=21]
[ext_resource path="res://Continue_clicked.png" type="Texture" id=22]
[ext_resource path="res://restart_clicked.png" type="Texture" id=23]
[ext_resource path="res://Prefabs/font.tres" type="DynamicFont" id=24]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=25]
[ext_resource path="res://Home_clicked.png" type="Texture" id=26]
[ext_resource path="res://Home.png" type="Texture" id=27]
[ext_resource path="res://restart_smol_clicked.png" type="Texture" id=28]
[ext_resource path="res://restart_smol.png" type="Texture" id=29]
[ext_resource path="res://Madeby.png" type="Texture" id=30]
[ext_resource path="res://lvl5.png" type="Texture" id=31]
[ext_resource path="res://lvl5_locked.png" type="Texture" id=32]
[ext_resource path="res://lvl6.png" type="Texture" id=33]
[ext_resource path="res://lvl6_locked.png" type="Texture" id=34]
[ext_resource path="res://lvl9.png" type="Texture" id=35]
[ext_resource path="res://lvl10.png" type="Texture" id=36]
[ext_resource path="res://lvl8_locked.png" type="Texture" id=37]
[ext_resource path="res://lvl8.png" type="Texture" id=38]
[ext_resource path="res://lvl9_locked.png" type="Texture" id=39]
[ext_resource path="res://lvl7.png" type="Texture" id=40]
[ext_resource path="res://lvl10_locked.png" type="Texture" id=41]
[ext_resource path="res://lvl7_locked.png" type="Texture" id=42]
[ext_resource path="res://Tuto.png" type="Texture" id=43]
[ext_resource path="res://Tuto_clicked.png" type="Texture" id=44]
[ext_resource path="res://Player/1-Player-Bomb Guy1.png" type="Texture" id=45]
[ext_resource path="res://Player/1-Player-Bomb Guy14.png" type="Texture" id=46]
[ext_resource path="res://Player/1-Player-Bomb Guy3.png" type="Texture" id=47]
[ext_resource path="res://Player/1-Player-Bomb Guy4.png" type="Texture" id=48]
[ext_resource path="res://Player/1-Player-Bomb Guy21.png" type="Texture" id=49]
[ext_resource path="res://Player/1-Player-Bomb Guy7.png" type="Texture" id=50]
[ext_resource path="res://Player/1-Player-Bomb Guy8.png" type="Texture" id=51]
[ext_resource path="res://Player/1-Player-Bomb Guy25.png" type="Texture" id=52]
[ext_resource path="res://Player/1-Player-Bomb Guy9.png" type="Texture" id=53]
[ext_resource path="res://Player/1-Player-Bomb Guy22.png" type="Texture" id=54]
[ext_resource path="res://Player/1-Player-Bomb Guy5.png" type="Texture" id=55]
[ext_resource path="res://Player/1-Player-Bomb Guy6.png" type="Texture" id=56]
[ext_resource path="res://Player/1-Player-Bomb Guy13.png" type="Texture" id=57]
[ext_resource path="res://Player/1-Player-Bomb Guy26.png" type="Texture" id=58]
[ext_resource path="res://Player/1-Player-Bomb Guy17.png" type="Texture" id=59]
[ext_resource path="res://Player/1-Player-Bomb Guy16.png" type="Texture" id=60]
[ext_resource path="res://Player/1-Player-Bomb Guy15.png" type="Texture" id=61]
[ext_resource path="res://Player/1-Player-Bomb Guy18.png" type="Texture" id=62]
[ext_resource path="res://Player/1-Player-Bomb Guy10.png" type="Texture" id=63]
[ext_resource path="res://Player/1-Player-Bomb Guy11.png" type="Texture" id=64]
[ext_resource path="res://Player/1-Player-Bomb Guy20.png" type="Texture" id=65]
[ext_resource path="res://Player/1-Player-Bomb Guy19.png" type="Texture" id=66]
[ext_resource path="res://Player/1-Player-Bomb Guy23.png" type="Texture" id=67]
[ext_resource path="res://Player/1-Player-Bomb Guy12.png" type="Texture" id=68]
[ext_resource path="res://Player/1-Player-Bomb Guy24.png" type="Texture" id=69]
[ext_resource path="res://Player/1-Player-Bomb Guy2.png" type="Texture" id=70]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 45 ), ExtResource( 70 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 53 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 68 ), ExtResource( 57 ), ExtResource( 46 ), ExtResource( 61 ), ExtResource( 60 ), ExtResource( 59 ), ExtResource( 62 ), ExtResource( 66 ), ExtResource( 65 ), ExtResource( 49 ), ExtResource( 54 ), ExtResource( 67 ), ExtResource( 69 ), ExtResource( 52 ), ExtResource( 58 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GameManager" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TestAdmob" type="Button" parent="."]
visible = false
margin_left = 1024.0
margin_top = 512.0
margin_right = 1061.0
margin_bottom = 532.0
rect_scale = Vector2( 5, 5 )
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TestAdmob"]
margin_left = 1.60001
margin_top = 22.8
margin_right = 41.6
margin_bottom = 36.8
text = "test"

[node name="Win" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colorBG" type="ColorRect" parent="Win"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Win"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.5
margin_top = -57.0
margin_right = 188.5
margin_bottom = 57.0
rect_pivot_offset = Vector2( 188, 57 )
custom_fonts/font = ExtResource( 24 )
text = "You win"
align = 1
valign = 1

[node name="Button" type="TextureButton" parent="Win"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 142.0
margin_right = 118.0
margin_bottom = 210.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 118, 34 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )

[node name="Lose" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colorBG" type="ColorRect" parent="Lose"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Lose"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.5
margin_top = -57.0
margin_right = 195.5
margin_bottom = 57.0
custom_fonts/font = ExtResource( 24 )
text = "You lose"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Lose"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 142.0
margin_right = 118.0
margin_bottom = 210.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 118, 34 )
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 23 )

[node name="PlayBtn" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -78.0
margin_right = 214.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 219, 95 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutoBtn" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.5
margin_top = 79.0
margin_right = 186.5
margin_bottom = 241.0
rect_pivot_offset = Vector2( 186, 81 )
texture_normal = ExtResource( 43 )
texture_pressed = ExtResource( 44 )
expand = true
stretch_mode = 5

[node name="RestartBtn" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 40.0
margin_right = -44.0
margin_bottom = 108.0
theme = ExtResource( 2 )
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 28 )

[node name="HomeBtn" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1568.0
margin_top = 40.0
margin_right = -1468.0
margin_bottom = 108.0
theme = ExtResource( 2 )
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitBtn" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.5
margin_top = 204.0
margin_right = 186.5
margin_bottom = 394.0
rect_pivot_offset = Vector2( 186, 95 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="LvlContainer" type="GridContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -77.0
margin_right = 200.0
margin_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 200, 77 )
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl1Btn" type="TextureButton" parent="LvlContainer"]
margin_right = 72.0
margin_bottom = 72.0
texture_normal = ExtResource( 11 )
texture_disabled = ExtResource( 7 )

[node name="Time" type="Label" parent="LvlContainer/Lvl1Btn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl2Btn" type="TextureButton" parent="LvlContainer"]
margin_left = 82.0
margin_right = 154.0
margin_bottom = 72.0
disabled = true
texture_normal = ExtResource( 8 )
texture_disabled = ExtResource( 9 )

[node name="Time" type="Label" parent="LvlContainer/Lvl2Btn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl3Btn" type="TextureButton" parent="LvlContainer"]
margin_left = 164.0
margin_right = 236.0
margin_bottom = 72.0
disabled = true
texture_normal = ExtResource( 10 )
texture_disabled = ExtResource( 12 )

[node name="Time" type="Label" parent="LvlContainer/Lvl3Btn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl4Btn" type="TextureButton" parent="LvlContainer"]
margin_left = 246.0
margin_right = 318.0
margin_bottom = 72.0
disabled = true
texture_normal = ExtResource( 13 )
texture_disabled = ExtResource( 14 )

[node name="Time" type="Label" parent="LvlContainer/Lvl4Btn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl5Btn" type="TextureButton" parent="LvlContainer"]
margin_left = 328.0
margin_right = 400.0
margin_bottom = 72.0
disabled = true
texture_normal = ExtResource( 31 )
texture_disabled = ExtResource( 32 )

[node name="Time" type="Label" parent="LvlContainer/Lvl5Btn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl6Btn" type="TextureButton" parent="LvlContainer"]
margin_top = 82.0
margin_right = 72.0
margin_bottom = 154.0
disabled = true
texture_normal = ExtResource( 33 )
texture_disabled = ExtResource( 34 )

[node name="Time" type="Label" parent="LvlContainer/Lvl6Btn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl7Btn" type="TextureButton" parent="LvlContainer"]
margin_left = 82.0
margin_top = 82.0
margin_right = 154.0
margin_bottom = 154.0
disabled = true
texture_normal = ExtResource( 40 )
texture_disabled = ExtResource( 42 )

[node name="Time" type="Label" parent="LvlContainer/Lvl7Btn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl8Btn" type="TextureButton" parent="LvlContainer"]
margin_left = 164.0
margin_top = 82.0
margin_right = 236.0
margin_bottom = 154.0
disabled = true
texture_normal = ExtResource( 38 )
texture_disabled = ExtResource( 37 )

[node name="Time" type="Label" parent="LvlContainer/Lvl8Btn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl9Btn" type="TextureButton" parent="LvlContainer"]
margin_left = 246.0
margin_top = 82.0
margin_right = 318.0
margin_bottom = 154.0
disabled = true
texture_normal = ExtResource( 35 )
texture_disabled = ExtResource( 39 )

[node name="Time" type="Label" parent="LvlContainer/Lvl9Btn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl10Btn" type="TextureButton" parent="LvlContainer"]
margin_left = 328.0
margin_top = 82.0
margin_right = 400.0
margin_bottom = 154.0
disabled = true
texture_normal = ExtResource( 36 )
texture_disabled = ExtResource( 41 )

[node name="Time" type="Label" parent="LvlContainer/Lvl10Btn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -293.0
margin_top = -300.5
margin_right = 325.0
margin_bottom = -171.5
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 309, 64 )
texture = ExtResource( 15 )

[node name="Sprite" type="AnimatedSprite" parent="Title"]
position = Vector2( 9, 41.75 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 1 )
frame = 20
speed_scale = 2.0
playing = true

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="MadeBy" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -49.0
margin_right = 430.0
rect_pivot_offset = Vector2( 275, 65 )
texture_normal = ExtResource( 30 )

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 25 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-5051836604470518/9087789126"
interstitial_id = "ca-app-pub-5051836604470518/4579350867"

[connection signal="pressed" from="TestAdmob" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Win/Button" to="." method="_on_Button_win_continue_pressed"]
[connection signal="pressed" from="Lose/Button" to="." method="_on_Button_lose_restart_pressed"]
[connection signal="pressed" from="PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="TutoBtn" to="." method="_on_TutoBtn_pressed"]
[connection signal="pressed" from="RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="HomeBtn" to="." method="_on_HomeBtn_pressed"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="LvlContainer/Lvl1Btn" to="." method="_on_Lvl1Btn_pressed"]
[connection signal="pressed" from="LvlContainer/Lvl2Btn" to="." method="_on_Lvl2Btn_pressed"]
[connection signal="pressed" from="LvlContainer/Lvl3Btn" to="." method="_on_Lvl3Btn_pressed"]
[connection signal="pressed" from="LvlContainer/Lvl4Btn" to="." method="_on_Lvl4Btn_pressed"]
[connection signal="pressed" from="LvlContainer/Lvl5Btn" to="." method="_on_Lvl5Btn_pressed"]
[connection signal="pressed" from="LvlContainer/Lvl6Btn" to="." method="_on_Lvl6Btn_pressed"]
[connection signal="pressed" from="LvlContainer/Lvl7Btn" to="." method="_on_Lvl7Btn_pressed"]
[connection signal="pressed" from="LvlContainer/Lvl8Btn" to="." method="_on_Lvl8Btn_pressed"]
[connection signal="pressed" from="LvlContainer/Lvl9Btn" to="." method="_on_Lvl9Btn_pressed"]
[connection signal="pressed" from="LvlContainer/Lvl10Btn" to="." method="_on_Lvl10Btn_pressed"]
[connection signal="pressed" from="MadeBy" to="." method="_on_MadeBy_pressed"]
[connection signal="interstitial_closed" from="AdMob" to="." method="_on_AdMob_interstitial_closed"]
[connection signal="interstitial_failed_to_load" from="AdMob" to="." method="_on_AdMob_interstitial_failed_to_load"]
